--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -48,6 +48,8 @@ sync_network_data:
         jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key.split(".")[0] }}`]]][][]."link-level-type"[].data'  # yamllint disable-line rule:quoted-strings
         # jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key.split(".")[0] }}`]]][][]."if-type"[].data'  # yamllint disable-line rule:quoted-strings
         # jpath: '{% if "." in current_key %}"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."if-type"[].data {% else %}"interface-information"[]."physical-interface"[].["logical-interface"[?name[?data==`{{ current_key }}`]]][][]'
+        post_processor: "{% if obj | length > 0 %}{{ obj[0] | map_interface_type }}{% else %}'other'{% endif %}"
+        iterable_type: "str"
   interfaces__ip_addresses:
     commands:
       - command: "show interfaces | display json"
@@ -71,17 +73,19 @@ sync_network_data:
       - command: "show interfaces | display json"
         parser: "none"
         jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."description"[].data'  # yamllint disable-line rule:quoted-strings
+        iterable_type: "str"
   interfaces__link_status:
     commands:
       - command: "show interfaces | display json"
         parser: "none"
         jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key.split(".")[0] }}`]]][][]."admin-status"[].data'  # yamllint disable-line rule:quoted-strings
+        post_processor: "{{ obj[0] | interface_status_to_bool }}"
   interfaces__802.1Q_mode:
     commands:
       - command: "show interfaces | display json"
         parser: "none"
         jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
-        post_processor: ""
+        iterable_type: "str"
   interfaces__lag:
     commands:
       - command: "show interfaces | display json"
